# django-blog

./: db.sqlite3  pyproject.toml  requirements.txt
.ebextensions/: django.config
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_remove_post_image_name_post_image.py  0003_comment.py
blog/static/blog/: all_posts.css  index.css  post.css  post_detail.css
blog/templates/blog/: all_posts.html  index.html  post_detail.html  stored-posts.html
blog/templates/blog/includes/: post.html
blog_tutorial/: settings.py  urls.py
static/: 404.css  app.css
staticfiles/: app.css
staticfiles/blog/: stored_posts.css
templates/: 404.html  base.html
