[tool.poetry]
name = "blog-tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "blog_tutorial"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
